correct some mistakes

--- a/report/A-Simplified-Git.tex
+++ b/report/A-Simplified-Git.tex
@@ -373,7 +373,7 @@ sit reset  [--commit=<commit-id>] --path=<path_1> [--path=<path_2> ...]
 \end{center}
 \subsection{时间使用}
 比较了sit（有无压缩功能）与git的时间效率（结果见后图）。
-\begin{figure}[h]
+\begin{figure}[h!]
 	\centering
 	\includegraphics[scale=0.7]{figure_1.png}
 	\caption{单次commit操作所需要的时间}
