--- a/report/A-Simplified-Git.tex
+++ b/report/A-Simplified-Git.tex
@@ -5,6 +5,7 @@
 \usepackage{color}
 \usepackage{fontspec}
 \usepackage{graphicx}
+\usepackage{float}
 \setmainfont{Times New Roman}
 
 \definecolor{mygreen}{rgb}{0,0.6,0}
@@ -373,10 +374,12 @@ sit reset  [--commit=<commit-id>] --path=<path_1> [--path=<path_2> ...]
 \end{center}
 \subsection{时间使用}
 比较了sit（有无压缩功能）与git的时间效率（结果见后图）。
-\begin{figure}[h!]
+\begin{figure}[H]
 	\centering
 	\includegraphics[scale=0.7]{figure_1.png}
 	\caption{单次commit操作所需要的时间}
+\end{figure}
+\begin{figure}[H]
 	\centering
 	\includegraphics[scale=0.7]{figure_2.png}
 	\caption{耗去的总时间}
