use fancystyle to reconstruct the head and foot of pages

--- a/report/A-Simplified-Git.tex
+++ b/report/A-Simplified-Git.tex
@@ -6,6 +6,7 @@
 \usepackage{fontspec}
 \usepackage{graphicx}
 \usepackage{float}
+\usepackage{extramarks}
 \setmainfont{Times New Roman}
 
 \definecolor{mygreen}{rgb}{0,0.6,0}
@@ -45,12 +46,13 @@
   xleftmargin=2em,xrightmargin=2em  
 }
 
-
-\title{可持久化本地代码仓库的实现}
-
+\title{可持久化本地代码仓库——sit}
 \author{柯嵩宇\quad 陈乐群 \\ 2014级ACM班 \\ 上海交通大学}
 
+\fancyhead[L]{}
+
 \begin{document}
+\pagestyle{fancy}
 \maketitle
 {\small \tableofcontents}
 \newpage
