--- a/report/A-Simplified-Git.tex
+++ b/report/A-Simplified-Git.tex
@@ -135,7 +135,7 @@ Core.hpp Core.cc
 \subsubsection{实现方法}
 \begin{description}
 	\item[版本之间] 先对两个版本的index进行diff，等到两个版本的文件列表的额差异信息（Add, Rm, Modify, Same），然后对差异信息为Modify的文件调用针对文件的比较算法。
-	\item[文件之间] 对两个文件逐行Hash，对得到的Hash值列表执行LCS近似算法（时间复杂度$O(len*d)$，其中$len$为两个列表中较长的那个的值,$d$为输入数据的差异个数）。
+	\item[文件之间] 对两个文件逐行Hash，对得到的Hash值列表执行LCS算法（时间复杂度$O((n+m)*d)$，其中$n$, $m$为两个列表的长度,$d$为输入数据的差异个数）。
 \end{description}
 \subsubsection{相关文件}
 Diff.hpp Diff.cc MurmurHash3.hpp MurmurHash3.cc
