correct some mistakes in the report add a Makefile which only has target clean to remove the useless files which are produced by  XeLaTeX.

--- a/report/something-about-design.tex
+++ b/report/something-about-design.tex
@@ -60,16 +60,15 @@ sit
 在 sit 执行各种任务时，会遇上以下几种不同的文件列表：
 
 \begin{itemize}
-\item
-  树形结构
-\item
-  repo 目录的文件系统
-\item
-  commit 的文件列表
-\item
-  列表结构
-\item
-  stage 区的 index
+	\item 树形结构
+  	\begin{itemize}
+		\item repo 目录的文件系统
+		\item commit 的文件列表
+	\end{itemize}
+	\item 列表结构
+	\begin{itemize}
+		\item stage 区的 index
+	\end{itemize}
 \end{itemize}
 
 sit 的各种任务比如 \texttt{diff}, \texttt{status}, \texttt{checkout},
